Version 2.02.57 -
====================================
  Give better error message for pvmove when all data is skipped.
  Fix memory lock imbalance in lv_suspend if already suspended.
  Fix pvmove test mode to not fail and do not poll.
  Fix error message if VG already exist in vgcreate.
  Fix tools to use log_error when stopped by user.
  Fix lvcreate --readahead.
  Fix clvmd memory leak in lv_info_by_lvid.
  Do not allow creating mirrors of more than 8 images.
  Use locking_type 3 (compiled in cluster locking) in lvmconf.
  Remove duplicate dm_list macros and functions.
  Log failure type and recognise type 'F' (flush) in dmeventd mirror plugin.
  Extend internal PV/VG/LV/segment status variables from 32-bit to 64-bit.

Version 2.02.56 - 24th November 2009
====================================
  Add missing vg_release to pvs and pvdisplay to fix memory leak.
  Do not try to unlock VG which is not locked in _process_one_vg.
  Move is_long_lived persistent_filter_dump to happen after every full scan.
  Refresh device filters before full device rescan in lvmcache.
  Return error status if vgchange fails to activate some volume.
  Fix suspend/resume lock type test causing unbalanced memory locking.
  Revert vg_read_internal change as clvmd was not ready for vg_read. (2.02.55)

Version 2.02.55 - 19th November 2009
====================================
  Fix deadlock when changing mirrors due to unpaired memlock refcount changes.
  Use separate memlock counter for dmeventd handlers to permit device scanning.
  Directly restrict vgchange to activating visible LVs.
  Fix pvmove region_size overflow for very large PVs.
  Fix lvcreate and lvresize %PVS argument always to use sensible total size.
  Tidy some uses of arg_count and introduce arg_is_set.
  Export outnl and indent functions for modules.
  Flush stdout after yes/no prompt.
  Update vgsplit and vgcreate to use vg_set_clustered.
  Add vg_mda_count and vg_set_clustered library functions.